# aetheria-project

./: ARCHITECTURE.md  Dockerfile  README.md  cli.py  config.yaml  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml  push-to-hf.yml
aetheria/: __init__.py  accelerator.py  config.py  core.py  data.py  inference.py  orchestrator.py  registry.py  utils.py
plugins/: __init__.py  callbacks.py  loggers.py  models.py
tests/: test_resilience.py
