[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetheria"
version = "10.0.0"
description = "A SOLID, Scale-Agnostic, Resilient Deep Learning Framework"
authors = [{name = "Architect", email = "admin@aetheria.ai"}]
dependencies = [
    "torch>=2.1.0",
    "numpy",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = ["wandb", "pytest"]

[project.scripts]
aetheria = "cli:app"

[tool.setuptools.packages.find]
include = ["aetheria*", "plugins*"]
